methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:2: error: Invalid literal number
  for (a <- 0to 3) {
            ^PictureMono2:2: error: illegal start of simple expression
  for (a <- 0to 3) {
            ^PictureMono2:13: error: ')' expected but '}' found.
}
^